kubernetes-AKS/mongodb.yaml
# MongoDB headless Service
apiVersion: v1
kind: Service
metadata:
  name: mongodb-headless-service
  namespace: pps-namespace
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - port: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: pps-namespace
spec:
  selector:
    matchLabels:
      app: mongodb # has to match .spec.template.metadata.labels
  serviceName: "mongodb-headless-service"
  replicas: 2
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: mongodb # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongodb
        image: mongo:6.0
        command:
        - mongod
        - "--replSet"
        - rs0
        - "--bind_ip_all"
        ports:
        - containerPort: 27017
          name: mongodb
        volumeMounts:
        - name: mongodb-storage
          mountPath: /data/db
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
  volumeClaimTemplates:
  - metadata:
      name: mongodb-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "managed-csi"
      resources:
        requests:
          storage: 1Gi

---
# External Service for MongoDB
apiVersion: v1
kind: Service
metadata:
  name: mongodb-external-service
  namespace: pps-namespace
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
  type: LoadBalancer
